# purpleair_api

./: .coverage  .gitattributes  .gitignore  AGENT_INSTRUCTIONS_UPDATE_NEEDED.md  BUILD_CPP.md  CHANGELOG.md  COMPLETION_REPORT.md  HOWTOAI.md  HOWTOAI.rst  HOWTO_MATTER.md  HOWTO_MATTER.rst  LICENSE  README.md  README.rst  SWIG_CONVERSION_SUMMARY.md  meson.build  meson_options.txt  purpleair_api  requirements.txt  setup.cfg  setup.py  setup_new.py
.chglog/: config.yml
.github/: WORKFLOW_DOCUMENTATION.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: pull_request_template.md
.github/agents/: the_flow_manager.md  the_scribe.md  the_snake_tester.md  the_squasher.md
.github/workflows/: auto_change_log.lock.yml  auto_change_log.md  auto_change_log.yml  auto_release_notes.lock.yml  auto_release_notes.md  black.yml  build_and_publish_csharp.yml  build_and_publish_csharp_test.yml  build_and_publish_javascript.yml  build_and_publish_javascript_test.yml  build_and_publish_to_pypi.yml  build_and_publish_to_test_pypi.yml  codeql.yml  copilot-setup-steps.yml  coverage_autofix_every_3_days.lock.yml  coverage_autofix_every_3_days.md  csharp_build_and_publish.yml  csharp_build_and_publish_test.yml  csharp_csharpier.yml  csharp_test.yml  docs_continuous_improvement_every_3_days.lock.yml  docs_continuous_improvement_every_3_days.md  go_test.yml  javascript_build_and_publish.yml  javascript_build_and_publish_test.yml  javascript_prettier.yml  javascript_test.yml  purpleair_api_watcher.lock.yml  purpleair_api_watcher.md  python_black.yml  python_build_and_publish_pypi.yml  python_build_and_publish_test_pypi.yml  python_sphinx_build.yml  python_test.yml  python_version_watcher.lock.yml  python_version_watcher.md  quality_auto_change_log.yml  quality_codeql.yml  sphinx_build.yml  test_csharp.yml  (+2 more)
.github/workflows/csharp/: build_and_publish.yml  build_and_publish_test.yml  csharpier.yml  (+1 more)
csharp/: Makefile  PurpleAirAPI.csproj  PurpleAirAPIError.cs  PurpleAirLocalAPI.cs  PurpleAirReadAPI.cs  PurpleAirWriteAPI.cs  README.md  README.rst  StringMap.cs  _string_vector.cs  meson.build  purpleairapi_base.cs  purpleairapi_basePINVOKE.cs  purpleairapi_base_wrap.cxx
csharp/tests/: PurpleAirAPITests.cs  Tests.csproj
diagrams/: README.md  README.rst
docs/: README.rst  index.html
docs/doctrees/: PurpleAirAPI.doctree  PurpleAirAPIConstants.doctree  PurpleAirAPIError.doctree  PurpleAirAPIHelpers.doctree  PurpleAirLocalAPI.doctree  PurpleAirReadAPI.doctree  PurpleAirWriteAPI.doctree  environment.pickle  index.doctree  modules.doctree
docs/html/: .buildinfo  .buildinfo.bak  PurpleAirAPI.html  PurpleAirAPIConstants.html  PurpleAirAPIError.html  PurpleAirAPIHelpers.html  PurpleAirLocalAPI.html  PurpleAirMatterConverter.html  PurpleAirReadAPI.html  PurpleAirWriteAPI.html  genindex.html  index.html  matter.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html_v1.3.1/: PurpleAirAPI.html  PurpleAirAPIConstants.html  PurpleAirAPIError.html  index.html
docs/html_v1.4.0/: .buildinfo  .buildinfo.bak  PurpleAirAPI.html  PurpleAirAPIConstants.html  PurpleAirAPIError.html  PurpleAirAPIHelpers.html  PurpleAirLocalAPI.html  PurpleAirReadAPI.html  PurpleAirWriteAPI.html  genindex.html  index.html  modules.html  py-modindex.html  search.html  searchindex.js
go/: Makefile  README.rst  go.mod  meson.build
go/purpleairapi/: cgo_helpers.go
go/tests/: purpleairapi_test.go
javascript/: README.md  README.rst  binding.gyp  index.js  jest.config.js  meson.build  package.json  purpleairapi_base_wrap.cxx
javascript/tests/: purpleairapi.test.js
purpleair_api/: PurpleAirAPI.py  PurpleAirAPIConstants.py  PurpleAirAPIConstants_legacy.py  PurpleAirAPIError.py  PurpleAirAPIHelpers.py  PurpleAirLocalAPI.py  PurpleAirMatterConverter.py  PurpleAirReadAPI.py  PurpleAirWriteAPI.py  PurpleAirWriteAPI_legacy.py  README.rst  matter.py
purpleair_api/include/: PurpleAirAPI.hpp  PurpleAirAPIError.h  PurpleAirAPIError.hpp  PurpleAirAPIHelpers.hpp  PurpleAirLocalAPI.h  PurpleAirLocalAPI.hpp  PurpleAirReadAPI.hpp  PurpleAirWriteAPI.h  PurpleAirWriteAPI.hpp
purpleair_api/interface/: purpleairapi.i  purpleairapi_base.i  purpleairapi_base_wrap.cpp  purpleairapi_error.i  purpleairapi_helpers.i  purpleairapi_local.i  purpleairapi_read.i  purpleairapi_write.i
purpleair_api/src/: PurpleAirAPI.cpp  PurpleAirAPIHelpers.cpp  PurpleAirLocalAPI.cpp  PurpleAirReadAPI.cpp  PurpleAirWriteAPI.cpp
python/: meson.build  pyproject.toml  setup.py
python/purpleair_api/: PurpleAirAPI.py  PurpleAirAPIConstants.py  PurpleAirAPIError.py  PurpleAirAPIHelpers.py  PurpleAirLocalAPI.py  PurpleAirReadAPI.py  PurpleAirWriteAPI.py  __init__.py  purpleairapi_base.py
python/tests/: README.rst  test_purpleair_api.py  test_purpleair_api_error.py  test_purpleair_api_helpers.py  test_purpleair_local_api.py  test_purpleair_read_api.py  test_purpleair_write_api.py
sphinx_docs_build/: README.rst  requirements.txt
sphinx_docs_build/source/: PurpleAirAPI.rst  PurpleAirAPIError.rst  PurpleAirAPIHelpers.rst  PurpleAirLocalAPI.rst  PurpleAirMatterConverter.rst  PurpleAirWriteAPI.rst  conf.py  index.rst  matter.rst  modules.rst
swig/: README.md  README.rst  meson.build
swig/include/: PurpleAirAPI.h  PurpleAirAPIHelpers.h  PurpleAirReadAPI.h
swig/interface/: purpleairapi.i  purpleairapi_base_wrap.cpp  purpleairapi_base_wrap.cxx  purpleairapi_go.i  purpleairapi_local.i  purpleairapi_read.i
swig/src/: PurpleAirAPIHelpers.cpp  PurpleAirLocalAPI.cpp  PurpleAirReadAPI.cpp  PurpleAirWriteAPI.cpp
test/: README.md  coverage.json  test_purpleair_api.py  test_purpleair_api_error.py  test_purpleair_api_helpers.py  test_purpleair_local_api.py  test_purpleair_read_api.py  test_purpleair_write_api.py
tests/: .coverage  README.md  README.rst  requirements.txt  test_matter.py  test_purpleair_api.py  test_purpleair_api_constants.py  test_purpleair_api_error.py  test_purpleair_api_helpers.py  test_purpleair_local_api.py  test_purpleair_matter_converter.py  test_purpleair_read_api.py  test_purpleair_write_api.py
(+28 files in other folders)
