option(
  'csharp_bindings',
  type: 'boolean',
  value: true,
  description: 'Build C# SWIG bindings (requires SWIG, g++, libcurl, and dotnet)',
)

option(
  'go_bindings',
  type: 'boolean',
  value: true,
  description: 'Build Go SWIG bindings (requires SWIG, g++, libcurl, and Go 1.21+)',
)

option(
  'javascript_bindings',
  type: 'boolean',
  value: true,
  description: 'Build JavaScript/Node.js SWIG bindings (requires SWIG, node-gyp, and npm)',
)
