[metadata]
description-file = README.md
license_files = LICENSE
name = purpleair_api
version = 1.3.1
author = Carlos Santos
author_email = dose.lucky.sake@cloak.id
license = MIT
keywords =
    purpleair_api
    purple air api
    purple_air
    purple air
    purpleair_sensor
    purpleair sensor
    purpleair-sensor
url = https://github.com/carlkidcrypto/purpleair_api
long_description = file: README.md
long_description_content_type = text/markdown
platforms = Windows 32/64, Linux 32/64, MacOS 32/64

[options]
packages = purpleair_api
install_requires = requests
python_requires = >=3.10,<3.15

[tool:black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']