[build-system]
requires = ["setuptools>=61.0", "wheel", "swig"]
build-backend = "setuptools.build_meta"

[project]
name = "purpleair_api"
version = "2.0.0a0"
description = "PurpleAir API wrapper with C++ backend and SWIG bindings"
readme = "../README.rst"
license = {text = "MIT"}
authors = [
    {name = "Carlos Santos", email = "dose.lucky.sake@cloak.id"}
]
keywords = [
    "purpleair_api",
    "purple air api",
    "purple_air",
    "purple air",
    "purpleair_sensor",
    "purpleair sensor",
    "purpleair-sensor"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/carlkidcrypto/purpleair_api"
Repository = "https://github.com/carlkidcrypto/purpleair_api"
Documentation = "https://github.com/carlkidcrypto/purpleair_api"

[project.optional-dependencies]
dev = [
    "pytest",
    "requests-mock",
    "black",
    "coverage",
]

[tool.setuptools]
packages = ["purpleair_api"]

[tool.setuptools.package-data]
purpleair_api = ["*.so", "*.pyd", "*.dll"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
